Make pin entry fit on small-screen devices (bug 1014746)

--- a/public/stylus/_typography.styl
+++ b/public/stylus/_typography.styl
@@ -7,12 +7,12 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
     font-weight: 400;
-    margin: .75em 0 .75em;
+    margin: 0.5em 0;
 }
 
 h1 {
     font-size: 18px;
-    line-height: 26px;
+    line-height: 24px;
 }
 
 h2 {
